--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ShakeDetect</string>
+    <string name="perfeature">PERFEATURE</string>
+    <string name="turn_on_screen_by_shaking">Turn On Screen By Shaking</string>
+    <string name="sleep_mode">Sleep mode</string>
+    <string name="angular_value">angular value</string>
+    <string name="feature1">feature1</string>
 </resources>
